fix sidebar shrink and overflow, styles for paragraphs and links, news page done

--- a/src/components/container/container.scss
+++ b/src/components/container/container.scss
@@ -1,3 +1,5 @@
+@import '../../scss/vars';
+
 .main {
   display: flex;
   height: calc(100% - 81px);
@@ -17,4 +19,21 @@ h1 {
 
 h2 {
   margin-bottom: 16px;
+}
+
+p {
+  font-weight: 500;
+  margin-bottom: 24px;
+}
+
+a {
+  transition: 0.3s;
+
+  &:link {
+    color: $colorLink;
+  }
+
+  &:hover {
+    color: $colorPrimary;
+  }
 }
