--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,12 +1,19 @@
 @import '../../scss/vars';
 
 .sidebar {
-  overflow: hidden;
+  overflow-x: scroll;
   width: 300px;
   height: 100%;
   padding: 24px 20px 24px 32px;
+  flex-shrink: 0;
   background: rgba(255, 255, 255, 0.05);
   box-shadow: 0px 0px 5px rgba(2, 0, 96, 0.25);
+
+  &::-webkit-scrollbar-thumb {
+    background: $colorSecondary;
+    padding: 15px;
+    margin: 15px;
+  }
 
   &__title {
     font-weight: 700;
@@ -51,15 +58,15 @@
 
       &:after {
         content: '';
-        width: 6px;
+        width: 3px;
         height: 111%;
         display: block;
         background: $colorPrimary;
-        border-radius: 5px;
+        border-radius: 5px 0 0 5px;
         position: absolute;
         top: 50%;
         transform: translate(0, -50%);
-        right: -23px;
+        right: -20px;
       }
     }
   }
@@ -94,6 +101,7 @@
       svg {
         width: 15px;
         min-width: 15px;
+        fill: $colorSecondary;
       }
     }
 
