--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,6 +10,19 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 4px;
+
+  &-track {
+    border-radius: 5px 0 0 5px;
+  }
+
+  &-thumb {
+    background: $colorPrimary;
+    border-radius: 5px 0 0 5px;
+  }
+}
+
 body {
   font-family: $font-1;
   font-size: 20px;
